// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ actions 1`] = `
.c3 {
  font-feature-settings: normal;
  vertical-align: baseline;
  padding: 0;
  font-family: Navigo,Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal !important;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 24px;
  line-height: 30px;
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h5
        class="c3"
        color="brand-primary"
      >
        Card title
      </h5>
    </div>
    <div
      class="Cardstyles__Actions-sc-2l30u5-2"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M19.5 12v-.5l2.6-1.9-.1-.7c0-.1-.2-1-.9-2.2-.7-1.2-1.3-1.7-1.4-1.8l-.5-.4-3 1.3c-.3-.2-.6-.4-.9-.5L14.9 2l-.6-.2c-.1 0-1-.3-2.3-.3-1.3 0-2.2.3-2.3.3l-.6.2-.4 3.3c-.3.1-.6.3-.9.5l-3-1.3-.5.4c-.1.1-.7.7-1.4 1.9-.6 1.1-.9 2-.9 2.1l-.1.6 2.6 1.9v1l-2.6 1.9.1.8c0 .1.2 1 .9 2.2.7 1.1 1.3 1.8 1.4 1.8l.5.4 3-1.3c.3.2.6.4.9.5l.4 3.3.6.2c.1 0 1 .3 2.3.3 1.3 0 2.2-.3 2.3-.3l.6-.2.4-3.2c.3-.2.6-.3.9-.5l3 1.3.5-.4c.1-.1.8-.7 1.4-1.8.6-1.1.9-2 .9-2.2l.1-.6-2.6-1.9V12zm.3 3.3c-.1.3-.3.6-.5 1s-.4.7-.6.9L15.9 16l-.5.4c-.4.4-.9.6-1.5.8l-.6.2-.3 3.1c-.6.1-1.6.1-2.2 0l-.3-3.1-.5-.3c-.5-.2-1-.5-1.5-.8l-.5-.4-2.8 1.2c-.2-.2-.4-.5-.6-.9-.2-.4-.4-.7-.5-1l2.5-1.8-.1-.6c0-.3-.1-.6-.1-.8 0-.2 0-.6.1-.8l.1-.6-2.4-1.9c.1-.3.3-.6.5-1s.4-.7.6-.9L8.1 8l.5-.4c.4-.2.9-.5 1.4-.7l.6-.2.3-3.1c.6-.1 1.6-.1 2.2 0l.3 3.1.6.2c.5.2 1 .5 1.5.8l.5.4 2.8-1.2c.2.2.4.5.6.9.2.4.4.7.5 1l-2.5 1.8.1.6c0 .3.1.6.1.8 0 .2 0 .6-.1.8l-.1.6 2.4 1.9z"
        />
        <path
          d="M12 14a2 2 0 100-4 2 2 0 000 4z"
        />
      </svg>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ any props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0 className"
  id="id"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ content title 1`] = `
.c1 {
  color: #808185;
  font-size: 18px;
  margin-bottom: 12px;
}

.c1:not(:first-child) {
  margin-top: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    <div
      class="c1"
    >
      Section header
    </div>
    <div>
      Section 1
    </div>
    <div
      class="c1"
    >
      Section header
    </div>
    <div>
      Section2
    </div>
  </div>
</div>
`;

exports[`Card w/ footer 1`] = `
.c1 {
  margin-top: 32px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0"
>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
  <div
    class="c1"
  >
    Card footer
  </div>
</div>
`;

exports[`Card w/ header 1`] = `
.c3 {
  font-feature-settings: normal;
  vertical-align: baseline;
  padding: 0;
  font-family: Navigo,Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal !important;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 24px;
  line-height: 30px;
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  color: #AAABAD;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h5
        class="c3"
        color="brand-primary"
      >
        Card title
      </h5>
      <div
        class="c4"
      >
        Card subtitle
      </div>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ stretch 1`] = `
.c3 {
  font-feature-settings: normal;
  vertical-align: baseline;
  padding: 0;
  font-family: Navigo,Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal !important;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 24px;
  line-height: 30px;
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
  height: 100%;
}

.c0 .Cardstyles__Content-sc-2l30u5-3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h5
        class="c3"
        color="brand-primary"
      >
        Simple card
      </h5>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;

exports[`Card w/ titile 1`] = `
.c3 {
  font-feature-settings: normal;
  vertical-align: baseline;
  padding: 0;
  font-family: Navigo,Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal !important;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 24px;
  line-height: 30px;
  color: #2B2D33;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  border-radius: 16px;
  background-color: #FFFFFF;
  padding: 32px;
  box-shadow: 0 4px 20px 0 rgba(0,0,0,0.08);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h5
        class="c3"
        color="brand-primary"
      >
        Card title
      </h5>
    </div>
  </div>
  <div
    class="Cardstyles__Content-sc-2l30u5-3"
  >
    Card content
  </div>
</div>
`;
